--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,40 +1,40 @@
-@import "cloudhuset/normalize";
-@import "cloudhuset/variables";
-@import "cloudhuset/mixins";
-@import "cloudhuset/base";
-@import "cloudhuset/buttons";
-@import "cloudhuset/tables";
-@import "cloudhuset/forms";
-@import "cloudhuset/header";
-@import "cloudhuset/user";
-@import "cloudhuset/footer";
-@import "cloudhuset/breadcrumbs";
-@import "cloudhuset/search";
-@import "cloudhuset/hero";
-@import "cloudhuset/page_header";
-@import "cloudhuset/sub-nav";
-@import "cloudhuset/blocks";
-@import "cloudhuset/home-page";
-@import "cloudhuset/recent-activity";
-@import "cloudhuset/category";
-@import "cloudhuset/section";
-@import "cloudhuset/article";
-@import "cloudhuset/attachments";
-@import "cloudhuset/share";
-@import "cloudhuset/comments";
-@import "cloudhuset/vote";
-@import "cloudhuset/actions";
-@import "cloudhuset/community";
-@import "cloudhuset/striped_list";
-@import "cloudhuset/status-label";
-@import "cloudhuset/post";
-@import "cloudhuset/collapsible-nav";
-@import "cloudhuset/collapsible-sidebar";
-@import "cloudhuset/my-activities";
-@import "cloudhuset/request";
-@import "cloudhuset/pagination";
-@import "cloudhuset/metadata";
-@import "cloudhuset/icons";
-@import "cloudhuset/user-profiles";
-@import "cloudhuset/search_results";
-@import "cloudhuset/dropdowns";
+@import "greenberry/normalize";
+@import "greenberry/variables";
+@import "greenberry/mixins";
+@import "greenberry/base";
+@import "greenberry/buttons";
+@import "greenberry/tables";
+@import "greenberry/forms";
+@import "greenberry/header";
+@import "greenberry/user";
+@import "greenberry/footer";
+@import "greenberry/breadcrumbs";
+@import "greenberry/search";
+@import "greenberry/hero";
+@import "greenberry/page_header";
+@import "greenberry/sub-nav";
+@import "greenberry/blocks";
+@import "greenberry/home-page";
+@import "greenberry/recent-activity";
+@import "greenberry/category";
+@import "greenberry/section";
+@import "greenberry/article";
+@import "greenberry/attachments";
+@import "greenberry/share";
+@import "greenberry/comments";
+@import "greenberry/vote";
+@import "greenberry/actions";
+@import "greenberry/community";
+@import "greenberry/striped_list";
+@import "greenberry/status-label";
+@import "greenberry/post";
+@import "greenberry/collapsible-nav";
+@import "greenberry/collapsible-sidebar";
+@import "greenberry/my-activities";
+@import "greenberry/request";
+@import "greenberry/pagination";
+@import "greenberry/metadata";
+@import "greenberry/icons";
+@import "greenberry/user-profiles";
+@import "greenberry/search_results";
+@import "greenberry/dropdowns";
