--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,8 +1,9 @@
 <header class="header">
   <div class="header__logo">
     {{#link 'help_center'}}
-    <img src="{{settings.logo}}" alt="{{t 'logo'}}">
+    <img src="{{asset 'icon.png'}}" alt="{{t 'logo'}}">
     {{/link}}
+    {{!-- <h1>Greenberry</h1> --}}
   </div>
 
   <div class="header__right">
