--- a/src/templates/request_page.hbs
+++ b/src/templates/request_page.hbs
@@ -1,13 +1,13 @@
-<nav class="my-activities-nav collapsible-nav">
+{{!-- <nav class="my-activities-nav collapsible-nav">
 	<ul class="collapsible-nav-list container">
 		<li aria-selected=true>{{t 'requests'}}</li>
 		<li>{{link 'contributions'}}</li>
 		<li>{{link 'subscriptions'}}</li>
 	</ul>
-</nav>
+</nav> --}}
 
 <div class="container">
-	<div class="request-breadcrumbs">{{breadcrumbs}}</div>
+	{{!-- <div class="request-breadcrumbs">{{breadcrumbs}}</div> --}}
 
 	<h2 class="request-title">{{request.subject}}</h2>
 
