--- a/src/templates/requests_page.hbs
+++ b/src/templates/requests_page.hbs
@@ -1,11 +1,11 @@
-
+{{!-- 
 <nav class="my-activities-nav collapsible-nav">
 	<ul class="collapsible-nav-list container">
 		<li aria-selected=true>{{t 'requests'}}</li>
 		<li>{{link 'contributions'}}</li>
 		<li>{{link 'subscriptions'}}</li>
 	</ul>
-</nav>
+</nav> --}}
 
 <div class="container">
 	<header class="my-activities-header">
