--- a/src/sass/greenberry/_base.scss
+++ b/src/sass/greenberry/_base.scss
@@ -30,8 +30,9 @@ h4,
 h5,
 h6 {
   font-family: $heading_font;
-  font-weight: $font-weight-base;
+  font-weight: $font-weight-black;
   margin-top: 0;
+  text-transform: uppercase;
 }
 
 h1 {
@@ -42,11 +43,12 @@ h2 {
 }
 h3 {
   font-size: 18px;
-  font-weight: $font-weight-semibold;
+  font-weight: $font-weight-bold;
 }
 
 h4 {
   font-size: 16px;
+  font-weight: $font-weight-bold;
 }
 
 a {
