--- a/src/templates/new_request_page.hbs
+++ b/src/templates/new_request_page.hbs
@@ -1,9 +1,9 @@
 <div class="container-divider"></div>
 <div class="container">
-  <nav class="sub-nav">
+  {{!-- <nav class="sub-nav">
     {{breadcrumbs}}
     {{search submit=false}}
-  </nav>
+  </nav> --}}
 
   <h1>
     {{t 'submit_a_request'}}
