refined Greenberry theme

--- a/src/sass/greenberry/_variables.scss
+++ b/src/sass/greenberry/_variables.scss
@@ -3,7 +3,7 @@
 // Colors
 $brand_color: #5801ff !default;
 $brand_text_color: #fff !default; //Color for text with an accent color background
-$text_color: #000 !default;
+$text_color: #32323C !default;
 $link_color: #5801ff !default;
 $background_color: #fff !default;
 $secondary_color: #FF554E !default;
