--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -3,7 +3,7 @@
     {{#link 'help_center'}}
     <img src="{{asset 'icon.png'}}" alt="{{t 'logo'}}">
     {{/link}}
-    {{!-- <h1>Greenberry</h1> --}}
+    {{!-- <h1>Greenberry ServiceDesk</h1> --}}
   </div>
 
   <div class="header__right">
