--- a/src/sass/greenberry/_blocks.scss
+++ b/src/sass/greenberry/_blocks.scss
@@ -12,9 +12,16 @@
     list-style: none;
     padding: 0;
 
+    &__title {
+      font-weight: 700;
+      font-size: 40px;
+      line-height: 40px;
+      color: rgb(50, 50, 60);
+    }
+
     &__item {
       @include tablet {
-        width: 33.33%;
+        width: 50%;
         // border-right: 1px solid $border-color;
         border-bottom: none;
         margin-bottom: 30px;
@@ -42,7 +49,7 @@
       &:hover,
       &:focus,
       &:active {
-        background-color: #f7f7f7;
+        // background-color: #f7f7f7;
 
         * {
           text-decoration: none;
@@ -69,22 +76,32 @@
         width: 48px;
         margin-bottom: 16px;
       }
+
+      svg {
+        height: 19px;
+        width: 31px;
+      }
     }
 
     &__item-link {
-      color: $brand_color;
+      color: $secondary_color;
       padding: 20px 30px;
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-      justify-content: center;
-      border-radius: inherit;
+      // display: flex;
+      // flex-direction: column;
+      // flex: 1;
+      // justify-content: center;
+      // border-radius: inherit;
+
+      font-family: $heading_font;
+      font-size: 30px;
+      font-weight: 700;
+      text-transform: uppercase;
 
       &:hover,
       &:active, 
       &:focus {
         text-decoration: none;
-        text-decoration: none;
+        color: $brand-color;
       }
 
     }
