--- a/src/sass/greenberry/_header.scss
+++ b/src/sass/greenberry/_header.scss
@@ -13,6 +13,8 @@ $header-height: 80px;
   width: 100%;
 
   &__logo {
+    display: flex;
+    flex-direction: row;
     img {
       width: 60px;
     }
