--- a/src/templates/footer.hbs
+++ b/src/templates/footer.hbs
@@ -2,6 +2,10 @@
 	<div class="footer-inner">
 		{{#link 'help_center'}}{{help_center.name}}{{/link}}
 
+		<div class="css-cohx8m e1jmsqza5"><ul class="css-1bb1rpc e1qw4r540"><li class="css-79elbk e1qw4r541"><span>Maliebaan 11</span></li><li class="css-79elbk e1qw4r541"><span>3581 CA<!-- --> <!-- -->Utrecht</span></li><li class="css-79elbk e1qw4r541"><span>Nederland</span></li><li class="css-79elbk e1qw4r541"><a href="https://goo.gl/maps/VnpepXb41QvfoxCZ7" target="_blank" rel="noopener noreferrer">Waar ligt dat?</a></li></ul></div>
+
+		<div class="css-cohx8m e1jmsqza6"><ul class="css-1bb1rpc e1qw4r540"><li class="css-79elbk e1qw4r541"><a href="tel:+31 (0)30 2737 424 ">+31 (0)30 2737 424 </a></li><li class="css-79elbk e1qw4r541"><a href="mailto:info@greenberry.nl">info@greenberry.nl</a></li></ul></div>
+
 		<div class="footer-language-selector">
 			{{#if alternative_locales}}
 			<div class="dropdown language-selector" aria-haspopup="true">
