--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -3,57 +3,31 @@
 <div class="container">
 
     <section class="section user-links">
-<!--     <h2 class="visibility-hidden">{{ t 'categories' }}</h2> -->
     <section class="categories">
 
-      <h2>
-        Welkom Gebruiker, hier staat een tekst om mensen te introduceren in de omgeving. 
+      <h2 class="category-list__title">
+        Welkom bij de <br /> Greenberry ServiceDesk.  
       </h2>
       <ul class="category-list">
       
         <li class="category-list__item">
-          {{#link 'new_request' class='category-list__item-link button'}}Maak een nieuw ticket{{/link}}
+          {{#link 'new_request' class='category-list__item-link'}}
+          Maak een nieuw ticket
+          <svg viewBox="0 0 31 19" class="icon icon-arrow"><g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g></g></svg>
+          {{/link}}
         </li>
 
         <li class="category-list__item">
-          {{#link "my_activities" class="category-list__item-link button"}}Bekijk al mijn tickets{{/link}}
+          {{#link "my_activities" class="category-list__item-link"}}
+          Bekijk al mijn tickets
+          <svg viewBox="0 0 31 19" class="icon icon-arrow"><g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g></g></svg>
+          {{/link}}
         </li>
       
          
       </ul>
     </section>
 
-  {{!-- <section class="categories">
-    <ul class="category-list">
-      {{#each categories}}
-        {{#if ../has_multiple_categories}}
-          <li class="category-list__item">
-            <a href='{{url}}' class="category-list__item-link">
-              <each loop="cat in categories">
-                {{#is id {{% cat.id %}} }}
-                  <img src="{{asset '{{% cat.icon %}}'}}" class="category-list__item-icon" />
-                {{/is}}
-              </each>
-              <h4 class="category-list__item-title">{{name}}</h4>
-              <p class="category-list__item-description">{{excerpt description}}</p>
-            </a>
-          </li>
-        {{else}}
-          {{#each sections}}
-            <li class="category-list__item">
-              <a href='{{url}}' class="category-list__item-link">
-                <h4 class="category-list__item-title">
-                  {{name}}
-                </h4>
-                <p class="category-list__item-description">{{excerpt description}}</p>
-              </a>
-            </li>
-          {{/each}}
-        {{/if}}
-      {{/each}}
-    </ul>
-    {{pagination}}
-  </section> --}}
 </div>
 
 <script src="{{asset 'home_page.js'}}"></script>
