--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -6,20 +6,25 @@
     <section class="categories">
 
       <h2 class="category-list__title">
-        Welkom bij de <br /> Greenberry ServiceDesk.  
+        Welkom bij de  onze ServiceDesk.  
       </h2>
+      <div class="category-list__intro">
+        <p>Heb je een foutje ontdekt op de website of in de applicatie? Of heb je een vraag? Laat het ons dan vooral weten door een aanvraag in te dienen. Of bekijk het overzicht met al je aanvragen. 
+<br/><br/>We zijn blij met jouw hulp bij het verbeteren van de website of applicatie. Hier wordt iedereen een beetje beter van! 
+</p>
+      </div>
       <ul class="category-list">
       
         <li class="category-list__item">
-          {{#link 'new_request' class='category-list__item-link'}}
-          Maak een nieuw ticket
+          {{#link 'new_request' class='new-request-url category-list__item-link'}}
+          IK WIL EEN AANVRAAG INDIENEN
           <svg viewBox="0 0 31 19" class="icon icon-arrow"><g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g></g></svg>
           {{/link}}
         </li>
 
         <li class="category-list__item">
           {{#link "my_activities" class="category-list__item-link"}}
-          Bekijk al mijn tickets
+          BEKIJK AL MIJN AANVRAGEN
           <svg viewBox="0 0 31 19" class="icon icon-arrow"><g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g><g><path fill="currentColor" d="M25,16.9V19h-5v-2.1H25z M28,12.7v2.1h-5v-2.1H28z M31,8.4v2.1H0V8.4H31z M28,4.2v2.1h-5V4.2 H28z M25,0v2.1h-5V0H25z"></path></g></g></svg>
           {{/link}}
         </li>
