small layout update

--- a/src/sass/greenberry/_header.scss
+++ b/src/sass/greenberry/_header.scss
@@ -86,6 +86,7 @@ $header-height: 80px;
     .dropdown-toggle {
       font-family: $heading_font;
       font-weight:700;
+      text-transform:uppercase;
     }
   }
 
