--- a/src/sass/greenberry/_variables.scss
+++ b/src/sass/greenberry/_variables.scss
@@ -109,7 +109,7 @@ $max-width-container: 1160px;
 
 // Fonts
 $heading_font: "National 2 Narrow", "Roboto", Helvetica, Arial, sans-serif !default;
-$text_font:  "Calibre", "Georgia", Helvetica, Arial, sans-serif !default;
+$text_font:  "Calibre", "Roboto", Helvetica, Arial, sans-serif !default;
 $font-weight-light: 400;
 $font-weight-base: 400;
 $font-weight-semibold: 500;
