--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -6,7 +6,7 @@
     <section class="categories">
 
       <h2 class="category-list__title">
-        Welkom bij de  onze ServiceDesk.  
+        Welkom bij onze ServiceDesk.  
       </h2>
       <div class="category-list__intro">
         <p>Heb je een foutje ontdekt op de website of in de applicatie? Of heb je een vraag? Laat het ons dan vooral weten door een aanvraag in te dienen. Of bekijk het overzicht met al je aanvragen. 
